link to paper, fix OVIC link, workshop PCs

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -5,7 +5,8 @@
   booktitle={Proceedings of the 36th International Conference on Machine Learning},
   series={ICML},
   note={accepted},
-  presort={01}
+  presort={01},
+  rmdnote={pdf=http://proceedings.mlr.press/v97/}
 }
 
 @inproceedings{li2019truth,
@@ -37,8 +38,7 @@
   series={AAAI},
   note={accepted},
   year={2019},
-  presort={04},
-  rmdnote={pdf=https://www.aaai.org/Papers/AAAI/2019/AAAI-AlfeldS.6136.pdf}
+  presort={04}
 }
 
 @inproceedings{fanaeepour2018histogramming,
