--- a/impact.Rmd
+++ b/impact.Rmd
@@ -83,7 +83,7 @@ _Media coverage (2017 exceeding 1m views):_
 
 <img src="images/laplace.png" style="width:200px; margin-right: 10px;" align="left"> 
 
-Also with colleagues Culnane and Teague since 2016, I have contributed towards several technical privacy assessments of government data initiatives. Contracted by the [Australian Bureau of Statistics](http://www.abs.gov.au/) (ABS), we have [analysed the privacy](https://arxiv.org/abs/1802.07975) of several options for name encoding for private record linkage---as might be used for Australian Census data for example. For [Transport for NSW](https://www.transport.nsw.gov.au/), we have performed a technical [privacy assessment](https://arxiv.org/abs/1704.08547) of a Data61-processed dataset of Opal transport card bus, train, ferry touch ons/offs again under contract. The data has subsequently been published. We have also discovered vulnerabilities in the hashing methodology published by the [UK Office of National Statistics](https://www.ons.gov.uk/) in a third [privacy assessment](https://arxiv.org/abs/1712.00871) (explained [here](https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem)). Common themes to this work are reflected in our 2018 [report](https://www.cpdp.vic.gov.au/images/content/pdf/privacy_papers/20180503-De-identification-report-OVIC-V1.pdf) for the [Office of the Victorian Information Commissioner](https://www.cpdp.vic.gov.au).
+Also with colleagues Culnane and Teague since 2016, I have contributed towards several technical privacy assessments of government data initiatives. Contracted by the [Australian Bureau of Statistics](http://www.abs.gov.au/) (ABS), we have [analysed the privacy](https://arxiv.org/abs/1802.07975) of several options for name encoding for private record linkage---as might be used for Australian Census data for example. For [Transport for NSW](https://www.transport.nsw.gov.au/), we have performed a technical [privacy assessment](https://arxiv.org/abs/1704.08547) of a Data61-processed dataset of Opal transport card bus, train, ferry touch ons/offs again under contract. The data has subsequently been published. We have also discovered vulnerabilities in the hashing methodology published by the [UK Office of National Statistics](https://www.ons.gov.uk/) in a third [privacy assessment](https://arxiv.org/abs/1712.00871) (explained [here](https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem)). Common themes to this work are reflected in our 2018 [report](https://ovic.vic.gov.au/resource/protecting-unit-record-level-personal-information/) for the [Office of the Victorian Information Commissioner](https://www.cpdp.vic.gov.au).
 
 _Media coverage (2018):_ [Mandarin](https://www.themandarin.com.au/92713-vic-privacy-commissioner-publishing-de-identified-citizen-records-is-a-risky-enterprise/)
 
@@ -213,7 +213,7 @@ As member of the Australian Academy of Science's [National Committee for Informa
 [Privacy Preserving Machine Learning (PPML) 2018](https://ppml-workshop.github.io/ppml/) (at NeurIPS), ['19](https://ppml-workshop.github.io/ppml/) (at CCS),
 [Deep Learning for Security 2018](https://www.ieee-security.org/TC/SPW2018/DLS/) (at IEEE S&P), 
 AI for Cyber Security (AICS at AAAI)['2017](http://www-personal.umich.edu/~arunesh/AICS2017/),['18](http://www-personal.umich.edu/~arunesh/AICS2018/), 
-AI & Security (AISec at CCS)['2009](http://sites.google.com/a/aisec.info/aisec-2009/),['10](http://sites.google.com/a/aisec.info/aisec-2010/),['13](http://sites.google.com/site/ccsaisec2013/),['15](http://www-bcf.usc.edu/~aruneshs/AISec2015.html),['16](http://teamcore.usc.edu/people/arunesh/AISec2016.html),['17](http://www.ai-sec.net/AISec2017/index.html),['18](http://aisec2018.icsi.berkeley.edu/aisec2018/), 
+AI & Security (AISec at CCS)['2009](http://sites.google.com/a/aisec.info/aisec-2009/),['10](http://sites.google.com/a/aisec.info/aisec-2010/),['13](http://sites.google.com/site/ccsaisec2013/),['15](http://www-bcf.usc.edu/~aruneshs/AISec2015.html),['16](http://teamcore.usc.edu/people/arunesh/AISec2016.html),['17](http://www.ai-sec.net/AISec2017/index.html),['18](http://aisec2018.icsi.berkeley.edu/aisec2018/),['19](https://aisec.cc/), 
 [S+SSPR'2016](http://www.s-sspr.org/) (at ICPR), 
 [PSDML'2010](http://fias.uni-frankfurt.de/~dimitrakakis/workshops/psdml-2010/) (at ECML/PKDD)
 * Organiser:
