--- a/group.Rmd
+++ b/group.Rmd
@@ -9,7 +9,7 @@ I am fortunate to have supervised a brilliant group of researchers
 
 ### Postdocs
 
-* [Shuo Zhou](http://shuo-zhou.info/) (w Tordesillas, Bailey, Bondell 2019-- ). Complex networks in materials science, cybersecurity.
+* [Shuo Zhou](https://shuozhou.github.io/) (w Tordesillas, Bailey, Bondell 2019-- ). Complex networks in materials science, cybersecurity.
 * [Thibaut Lienart](https://tlienart.github.io/) (2018-- ). Adversarial machine learning.
 
 ### PhD students
