--- a/impact.Rmd
+++ b/impact.Rmd
@@ -45,7 +45,7 @@ With colleagues Teague and Culnane, I helped uncover one of the largest privacy 
 
 The day after Medicare's retraction, the Attorney General published a plan to [legislate against reidentification](https://www.attorneygeneral.gov.au/Mediareleases/Pages/2016/ThirdQuarter/Amendment-to-the-Privacy-Act-to-further-protect-de-identified-data.aspx) of Commonwealth datasets. In the months to come the _Reidentification Criminal Offence Bill_ (an amendment to the _Privacy Act 1988_) was introduced to Parliament criminalising the act of reidentification, unless [with](http://www.itnews.com.au/news/brandis-says-white-hats-will-be-exempt-from-data-law-changes-438496) [prior](http://www.canberratimes.com.au/national/public-service/government-appoints-information-watchdog-timothy-pilgrim-but-no-one-to-fill-top-privacy-foi-jobs-20160928-grqm9j.html) [permission](https://www.oaic.gov.au/media-and-speeches/statements/australian-privacy-commissioner-s-investigation-into-published-mbs-and-pbs-data-sets). The bill, if passed, would be retroactively applied and reverse the burden of proof on accused. While stifling security experts and journalists responsibly disclosing existing privacy breaches to the government, the bill would not prevent private corporations or foreign entities outside Australian jurisdiction from misusing Commonwealth data. Of 15 submissions to the ensuing Parliamentary Inquiry examining the appropriateness of the bill, 14 were against including the Law Council of Australia, Australian Bankers’ Association, and EFF.
 Our [submission to the inquiry](http://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Legal_and_Constitutional_Affairs/PrivacyReidentification/Submissions) achieved significant impact, being directly quoted 9 times in the Senate Committee’s final report. 
-We wrote an [Op-Ed](http://www.smh.com.au/national/public-service/can-the-government-really-protect-your-privacy-when-it-deidentifies-public-data-20161204-gt3nny.html) in the Sydney Morning Herald clearly explaining [why](https://pursuit.unimelb.edu.au/articles/crime-and-privacy-in-open-data) criminalising reidentification would do more harm than good. Since then we have made several related submissions, including to the: [Data Sharing and Release Consultation 2018](https://www.pmc.gov.au/public-data/data-sharing-and-release-reforms/submissions) (file 20697), [Parliamentary Inquiry into the My Health Record System 2018](https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Community_Affairs/MyHealthRecordsystem/Submissions) (submission #59).
+We wrote an [Op-Ed](http://www.smh.com.au/national/public-service/can-the-government-really-protect-your-privacy-when-it-deidentifies-public-data-20161204-gt3nny.html) in the Sydney Morning Herald clearly explaining [why](https://pursuit.unimelb.edu.au/articles/crime-and-privacy-in-open-data) criminalising reidentification would do more harm than good. Since then we have made several related submissions, including to the: [Data Sharing and Release Consultation 2018](https://www.pmc.gov.au/public-data/data-sharing-and-release-reforms/submissions) (file 20697), [Parliamentary Inquiry into the My Health Record System 2018](https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Community_Affairs/MyHealthRecordsystem/Submissions) (submission #59), [ACCC Consumer Data Right draft rules 2019](https://www.accc.gov.au/focus-areas/consumer-data-right-cdr-0/cdr-draft-rules-banking).
 
 _Media coverage (2016):_ [zdnet](http://www.zdnet.com/article/brandis-swings-his-golden-hammer-misses-mark/) ([again](http://www.zdnet.com/article/brandis-re-identification-law-proposal-slammed/)),
 [The Register](http://www.theregister.co.uk/2016/09/29/researchers_crack_oz_govt_medical_data_in_easy_basic_pc_attack/),
