talks, graduation, paper link, news

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -38,7 +38,8 @@
   series={AAAI},
   note={accepted},
   year={2019},
-  presort={04}
+  presort={04},
+  rmdnote={pub=https://aaai.org/ojs/index.php/AAAI/article/view/4183}
 }
 
 @inproceedings{fanaeepour2018histogramming,
