Pub details, some myki

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -4,9 +4,10 @@
   year={2019},
   booktitle={Proceedings of the 36th International Conference on Machine Learning},
   series={ICML},
-  note={accepted},
+  pages={3886--3895},
+  publisher={PMLR},
   presort={01},
-  rmdnote={pdf=http://proceedings.mlr.press/v97/}
+  rmdnote={pdf=http://proceedings.mlr.press/v97/li19i.html}
 }
 
 @inproceedings{li2019truth,
@@ -15,9 +16,9 @@
   year={2019},
   booktitle={Proceedings of the 2019 World Wide Web Conferece},
   series={WWW},
-  note={accepted},
+  pages={1028--1038},
   presort={02},
-  rmdnote={full=http://arxiv.org/abs/1902.08918}
+  rmdnote={full=http://arxiv.org/abs/1902.08918;pub=https://doi.org/10.1145/3308558.3313459}
 }
 
 @inproceedings{roohi2019differentiallyprivate,
@@ -26,9 +27,9 @@
   year={2019},
   booktitle={The 38th Annual IEEE International Conference on Computer Communications},
   series={INFOCOM},
-  note={accepted},
+  pages={2233--2241},
   presort={03},
-  rmdnote={full=https://arxiv.org/abs/1901.05562}
+  rmdnote={full=https://arxiv.org/abs/1901.05562;pub=https://doi.org/10.1109/INFOCOM.2019.8737405}
 }
 
 @inproceedings{alfeld2019attacking,
@@ -36,7 +37,7 @@
   author={Alfeld, Scott and Vartanian, Ara and Newman-Johnson, Lucas and Rubinstein, Benjamin I.P},
   booktitle={Proceedings of the 33rd AAAI Conference on Artificial Intelligence},
   series={AAAI},
-  note={accepted},
+  pages={3167--3174},
   year={2019},
   presort={04},
   rmdnote={pub=https://aaai.org/ojs/index.php/AAAI/article/view/4183}
@@ -223,8 +224,20 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1709.09778},
   year={2019},
   month={Jan},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
+}
+
+@misc{culnane2019stop,
+  title={Stop the Open Data Bus, We Want to Get Off},
+  author={Culnane, Chris and Rubinstein, Benjamin I. P. and Teague, Vanessa},
+  eprinttype = {arXiv},
+  eprintclass = {cs.CR},
+  eprint = {1908.05004},
+  year={2019},
+  month={Aug},
+  presort={06},
+  rmdnote={pdf=https://arxiv.org/pdf/1908.05004;pop=https://pursuit.unimelb.edu.au/articles/two-data-points-enough-to-spot-you-in-open-transport-records}
 }
 
 @misc{oetomo2019a,
@@ -235,7 +248,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1902.07500},
   year={2019},
   month={Feb},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/pdf/1902.07500}
 }
 
@@ -910,4 +923,5 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   presort={01},
   rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide}
 }
+
 
