--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 **Benjamin I. P. Rubinstein**, PhD (Berkeley)  
 Associate Professor, _School of Computing & Information Systems, University of Melbourne_
 
-I actively research topics in machine learning, security & privacy, databases such as adversarial learning, differential privacy and record linkage. Prior to joining the University of Melbourne in 2013, I enjoyed four years in the research divisions of Microsoft, Google, Intel and Yahoo! (all in the United States), followed by a short stint at IBM Research Australia. As a full-time Researcher at Microsoft Research, Silicon Valley, I shipped production systems for entity resolution in Bing and the Xbox360; my research has helped identify and plug side-channel attacks against the popular Firefox browser, and deanonymise an unprecedented Australian Medicare data release, prompting introduction of the Re-identification Offence Bill 2016. Since joining Melbourne in 2013, I have been awarded 
+I actively research topics in machine learning, security & privacy, databases such as adversarial learning, differential privacy and record linkage. Prior to joining the University of Melbourne in 2013, I enjoyed four years in the research divisions of Microsoft, Google, Intel and Yahoo! (all in the United States), followed by a short stint at IBM Research Australia. As a full-time Researcher at Microsoft Research, Silicon Valley, I shipped production systems for entity resolution in Bing and the Xbox360; my research has helped identify and plug side-channel attacks against the popular Firefox browser, and deanonymise Victorian myki transport data and an  unprecedented Australian Medicare data release, prompting introduction of the Re-identification Offence Bill 2016. Since joining Melbourne in 2013, I have been awarded 
 ```{r funding, echo=FALSE, results="asis"}
 FT <- read.csv("funding/funding.csv")
 
