ovic, neurips, ncics

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1,3 +1,15 @@
+@incollection{rubinstein2019data,
+  title={Data Security and AI},
+  author={Rubinstein, Benjamin I. P.},
+  booktitle={Closer to the machine: {T}echnical, social, and legal aspects of {AI}},
+  editor={Betram, Cliff and Gibson, Asher and Nugent, Adriana},
+  pages={105--119},
+  year={2019},
+  publisher={{Office of the Victorian Information Commissioner}},
+  presort={06},
+  rmdnote={pdf=https://ovic.vic.gov.au/closer-to-the-machine-ai-publication/}
+}
+
 @inproceedings{li2019exploiting,
   title={Exploiting Worker Correlation for Label Aggregation in Crowdsourcing},
   author={Li, Yuan and Rubinstein, Benjamin I. P. and Cohn, Trevor},
@@ -224,7 +236,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1709.09778},
   year={2019},
   month={Jan},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
 }
 
@@ -236,7 +248,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1908.05004},
   year={2019},
   month={Aug},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/pdf/1908.05004;pop=https://pursuit.unimelb.edu.au/articles/two-data-points-enough-to-spot-you-in-open-transport-records}
 }
 
@@ -248,7 +260,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1902.07500},
   year={2019},
   month={Feb},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/pdf/1902.07500}
 }
 
