adds d-blink paper, software

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -236,8 +236,20 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1709.09778},
   year={2019},
   month={Jan},
-  presort={09},
+  presort={10},
   rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
+}
+
+@misc{marchant2019dblink,
+  title={d-blink: Distributed End-to-End Bayesian Entity Resolution},
+  author={Marchant, Neil G. and Steorts, Rebecca C. and Kaplan, Andee and Rubinstein, Benjamin I. P. and Elazar, Daniel N.},
+  eprinttype = {arXiv},
+  eprintclass = {stat.CO},
+  eprint = {1909.06039},
+  year={2019},
+  month={Sep},
+  presort={07},
+  rmdnote={pdf=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink}
 }
 
 @misc{culnane2019stop,
@@ -248,7 +260,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1908.05004},
   year={2019},
   month={Aug},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/pdf/1908.05004;pop=https://pursuit.unimelb.edu.au/articles/two-data-points-enough-to-spot-you-in-open-transport-records}
 }
 
@@ -260,7 +272,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1902.07500},
   year={2019},
   month={Feb},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/pdf/1902.07500}
 }
 
