--- a/software.Rmd
+++ b/software.Rmd
@@ -9,6 +9,12 @@ My [group](group.html) and I have implemented our research contributions as usef
 
 ***
 
+[<img src="images/d-blink.png" style="width:150px; margin-right: 24px" align="left">](https://github.com/ngmarchant/dblink)
+
+[**`d-blink`**](https://github.com/ngmarchant/dblink) is an open-source Apache Spark package for end-to-end Bayesian statistical record linkage. The package implements our [[Marchant et al. 2019]](https://arxiv.org/abs/1909.06039) extensions to the `blink` model of [[Steorts 2015]](https://projecteuclid.org/euclid.ba/1441790411). As a fully Bayesian model, `blink` models a (posterior) distribution over all matchings of records, useful for propagating uncertainty through downstream analyses. The approach is also unsupervised, meaning it does not require ground-truth annotations of examples of matching records to train on. `d-blink` makes a number of non-trivial extensions that facilitate distributed inference for significantly scaling `blink` up to larger datasets.  
+
+***
+
 [<img src="images/diffpriv.png" style="width:150px; margin-right: 24px" align="left">](https://brubinstein.github.io/diffpriv/)
 
 [**`diffpriv`**](https://brubinstein.github.io/diffpriv/) is an open-source R package for privacy-preserving machine learning and statistics. The package implements numerous mechanisms for guaranteeing [differential privacy](https://en.wikipedia.org/wiki/Differential_privacy)---the leading framework for releasing data analyses on privacy-sensitive data in aggregate while protecting privacy of individuals, deployed Google, Apple and the U.S. Census Bureau, and awarded the 2017 Gödel Prize in theoretical computer science. The mechanisms implemented include our _Bernstein mechanism_ for releasing functions such as classifiers trained on sensitive data [[AAAI'17](http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf)]. Notably `diffpriv` also implements our _sensitivity sampler_ [[ICML'17](http://proceedings.mlr.press/v70/rubinstein17a.html)] for easy privatisation of black-box functions including programs, for which mathematical analysis required for differential privacy is difficult or impossible. The package is distributed on [CRAN](https://cran.r-project.org/package=diffpriv) and hosted on [GitHub](https://brubinstein.github.io/diffpriv/).
