group member changes, funding, reviewing

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -228,16 +228,15 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   rmdnote={pdf=http://hdl.handle.net/11343/197958}
 }
 
-@misc{fish2019sampling,
+@inproceedings{fish2020sampling,
   title={Sampling Without Compromising Accuracy in Adaptive Data Analysis},
   author={Fish, Benjamin and Reyzin, Lev and Rubinstein, Benjamin I. P.},
-  eprinttype = {arXiv},
-  eprintclass = {cs.LG},
-  eprint = {1709.09778},
-  year={2019},
-  month={Jan},
-  presort={10},
-  rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
+  booktitle={The 31st International Conference on Algorithmic Learning Theory},
+  year={2020},
+  presort={01},
+  note={To appear},
+  series={ALT},
+  rmdnote={full=https://arxiv.org/abs/1709.09778}
 }
 
 @misc{marchant2019dblink,
@@ -948,4 +947,13 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide}
 }
 
-
+@inproceedings{setiawan2020function,
+  title={Function Interpolation for Learned Index Structures},
+  year={2020},
+  author={Setiawan, Naufal Fikri and Rubinstein, Benjamin I. P. and Borovica-Gajic, Renata},
+  booktitle={Proceedings of the Australasian Computer Science Week Multiconference},
+  series={ACSW},
+  publisher={ACM},
+  note={To appear in the 31st Australasian Database Conference},
+  presort={02}
+}
