--- a/group.Rmd
+++ b/group.Rmd
@@ -5,25 +5,26 @@
 
 <br>
 
-I am fortunate to have supervised a brilliant group of researchers
+I am fortunate to supervise a brilliant group of researchers.
 
 ### Postdocs
 
 * [Andrew Cullen](https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au) (w Alpcan 2019-- ). Machine learning for spectrum management in contested environments.
+* [Sandamal Weerasinghe](https://cis.unimelb.edu.au/people/prameesha-weerasinghe) (w Leckie, Erfani, Alpcan 2019-- ). Adversarial machine learning.
 * [Shuo Zhou](https://shuozhou.github.io/) (w Tordesillas, Bailey, Bondell 2019-- ). Complex networks in materials science, cybersecurity.
 
 ### PhD students
 
+* [Roei Gelbhart](https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&hl=en) (2019-- ). Robustness in machine learning.
 * Ruihan Zhang (w Tim Miller 2019-- ). Explainable AI and machine learning.
-* [Duc Than Nguyen](https://ndthan.bitbucket.io/) (w Toby Murray 2018-- ). Probabilistic information flow security.
 * [Malinga Perera](http://www.malinga.me/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 * [Bastian Oetomo](https://www.linkedin.com/in/bastian-oetomo-34300856/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 * [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray, Gidon Ernst at LMU Munich 2018-- ). Software fuzzing with machine learning.
-* [Leyla Roohi](https://au.linkedin.com/in/leyla-roohi-b4544a67) (w Vanessa Teague 2017-- ). Secure storage and private querying for telecommunications metadata.
 * [Neil Marchant](https://www.linkedin.com/in/neil-marchant-466678aa/) (w Beka Steorts at Duke, Aurore Delaigle 2016-- ). Record linkage, adaptive importance sampling.
 
 ### PhD students---Completed
 
+* [Leyla Roohi](https://au.linkedin.com/in/leyla-roohi-b4544a67) (w Vanessa Teague 2017--19). Secure storage and private querying for telecommunications metadata (submitted)
 * Yuan Li (w Trevor Cohn 2015--19). Crowd sourcing, Bayesian optimisation, NLP (completed, passed)
 * [Lingjuan Lyu](https://www.researchgate.net/profile/Lingjuan_Lyu) (w Marimuthu Palaniswami 2016--18). Privacy in distributed sensing → Postdoc at the ANU
 * [Safiollah Heidari](https://sites.google.com/site/safiheidari/) (w Raj Buyya 2015--18). Distributed graph processing → Founder, NeuroPhyte
