--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -954,6 +954,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Proceedings of the Australasian Computer Science Week Multiconference},
   series={ACSW},
   publisher={ACM},
-  note={To appear in the 31st Australasian Database Conference},
-  presort={02}
+  note={In the 31st Australasian Database Conference},
+  presort={02},
+  rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
