--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -231,12 +231,13 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
 @inproceedings{fish2020sampling,
   title={Sampling Without Compromising Accuracy in Adaptive Data Analysis},
   author={Fish, Benjamin and Reyzin, Lev and Rubinstein, Benjamin I. P.},
-  booktitle={The 31st International Conference on Algorithmic Learning Theory},
+  booktitle={Proceedings of the 31st International Conference on Algorithmic Learning Theory},
   year={2020},
-  presort={01},
-  note={To appear},
   series={ALT},
-  rmdnote={full=https://arxiv.org/abs/1709.09778}
+  organization={PMLR},
+  pages={297--318},
+  presort={01},
+  rmdnote={pdf=http://proceedings.mlr.press/v117/fish20a/fish20a.pdf;pub=http://proceedings.mlr.press/v117/fish20a.html;full=https://arxiv.org/abs/1709.09778}
 }
 
 @misc{marchant2019dblink,
