--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -948,6 +948,15 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide}
 }
 
+@article{Zhou2020early,
+  title={Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
+  year={2020},
+  author={Zhou, Shuo and Bondell, Howard and Tordesillas, Antoinette and Rubinstein, Benjamin I. P. and Bailey, James},
+  journal={Annals of Applied Statistics},
+  note={To appear},
+  presort={02}
+}
+
 @inproceedings{setiawan2020function,
   title={Function Interpolation for Learned Index Structures},
   year={2020},
@@ -956,6 +965,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={ACSW},
   publisher={ACM},
   note={In the 31st Australasian Database Conference},
-  presort={02},
+  presort={03},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
