--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -957,6 +957,17 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   presort={02}
 }
 
+@inproceedings{liu2020legion,
+  title={Legion: Best-First Concolic Testing},
+  year={2020},
+  author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
+  booktitle={Proceedinsg of the 23rd International Conference on Fundamental Approaches to Software Engineering},
+  series={FASE},
+  note={Test-Comp session, to appear},
+  presort={03},
+  rmdnote={code=https://github.com/Alan32Liu/Legion}
+}
+
 @inproceedings{setiawan2020function,
   title={Function Interpolation for Learned Index Structures},
   year={2020},
@@ -965,6 +976,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={ACSW},
   publisher={ACM},
   note={In the 31st Australasian Database Conference},
-  presort={03},
+  presort={04},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
