test-comp arxiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -965,7 +965,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session, to appear},
   presort={03},
-  rmdnote={code=https://github.com/Alan32Liu/Legion}
+  rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311}
 }
 
 @inproceedings{setiawan2020function,
