--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -963,7 +963,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
   booktitle={Proceedinsg of the 23rd International Conference on Fundamental Approaches to Software Engineering},
   series={FASE},
-  note={Test-Comp session, to appear},
+  note={Test-Comp session},
+  pages={545--549},
   presort={03},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311}
 }
