--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -954,19 +954,20 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Zhou, Shuo and Bondell, Howard and Tordesillas, Antoinette and Rubinstein, Benjamin I. P. and Bailey, James},
   journal={Annals of Applied Statistics},
   note={To appear},
-  presort={02}
+  presort={02},
+  rmdnote={pdf=https://www.e-publications.org/ims/submission/AOAS/user/submissionFile/42032?confirm=68ff65ed}
 }
 
 @inproceedings{liu2020legion,
   title={Legion: Best-First Concolic Testing},
   year={2020},
   author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
-  booktitle={Proceedinsg of the 23rd International Conference on Fundamental Approaches to Software Engineering},
+  booktitle={Proceedings of the 23rd International Conference on Fundamental Approaches to Software Engineering},
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
   presort={03},
-  rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311}
+  rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
 @inproceedings{setiawan2020function,
