--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -958,6 +958,16 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://www.e-publications.org/ims/submission/AOAS/user/submissionFile/42032?confirm=68ff65ed}
 }
 
+@article{leins2020tracking,
+  title={Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions},
+  year={2020},
+  author={Leins, Kobi and Culnane, Chris and Rubinstein, Benjamin I. P.},
+  journal={Medical Journal of Australia},
+  note={Preprint},
+  presort={03},
+  rmdnote={pub=https://www.mja.com.au/journal/2020/tracking-tracing-trust-contemplating-mitigating-impact-covid-19-through-technological;pdf=https://www.mja.com.au/system/files/2020-05/Rubenstein%20mja20.00707%20-%207%20May%202020.pdf}
+}
+
 @inproceedings{liu2020legion,
   title={Legion: Best-First Concolic Testing},
   year={2020},
@@ -966,8 +976,28 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={03},
+  presort={04},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
+}
+
+@inproceedings{roohi2020assessing,
+  title={Assessing Centrality Without Knowing Connections},
+  year={2020},
+  author={Roohi, Leyla and Rubinstein, Benjamin I. P. and Teague, Vanessa},
+  booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
+  series={PAKDD},
+  note={To appear},
+  presort={06}
+}
+
+@inproceedings{han2020adversarial,
+  title={Adversarial Reinforcement Learning under Partial Observability in Autonomous Computer Network Defence},
+  year={2020},
+  author={Han, Yi and Hubczenko, David and Montague, Paul and De Vel, Olivier and Abraham, Tamas and Rubinstein, Benjamin I. P. and Leckie, Christopher and Alpcan, Tansu and Erfani, Sarah},
+  booktitle={2020 International Joint Conference on Neural Networks},
+  series={IJCNN},
+  note={To appear},
+  presort={07}
 }
 
 @inproceedings{setiawan2020function,
@@ -978,6 +1008,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={ACSW},
   publisher={ACM},
   note={In the 31st Australasian Database Conference},
-  presort={04},
+  presort={05},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
