--- a/impact.Rmd
+++ b/impact.Rmd
@@ -200,9 +200,7 @@ As member of the Australian Academy of Science's [National Committee for Informa
 
 ### Program committee membership
 
-* **ICML**['2011](http://www.icml-2011.org/),['12](http://icml.cc/2012/),['17](https://2017.icml.cc/),['18](https://2017.icml.cc/),['19 (area chair)](https://icml.cc/Conferences/2019),['20 (area chair)](https://icml.cc/),  
-[**AAAI**'2018 (senior PC)](https://aaai.org/Conferences/AAAI/aaai18.php), 
-**NeurIPS** (formerly NIPS)['2014](https://nips.cc/Conferences/2014),['17](https://nips.cc/Conferences/2017/),['18](https://nips.cc/Conferences/2018/),['19](https://nips.cc/Conferences/2019/),
+* **ICML**['2011](http://www.icml-2011.org/),['12](http://icml.cc/2012/),['17](https://2017.icml.cc/),['18](https://2017.icml.cc/),['19 (area chair)](https://icml.cc/Conferences/2019),['20 (area chair)](https://icml.cc/), **NeurIPS** (formerly NIPS)['2014](https://nips.cc/Conferences/2014),['17](https://nips.cc/Conferences/2017/),['18](https://nips.cc/Conferences/2018/),['19](https://nips.cc/Conferences/2019/),['20 area chair](https://nips.cc/Conferences/2020/), [**AAAI**'2018 (senior PC)](https://aaai.org/Conferences/AAAI/aaai18.php), 
 **ICDE**['2016](http://icde2016.fi/callposters.php#tabular1),['17](http://icde2017.sdsc.edu/), 
 [**AISTATS**'2017](http://www.aistats.org/), 
 [CSCML'2017](https://www.cs.bgu.ac.il/~fradmin/cscml17/organization.html), 
