--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -986,8 +986,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Roohi, Leyla and Rubinstein, Benjamin I. P. and Teague, Vanessa},
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
-  note={To appear},
-  presort={06}
+  pages={152--163},
+  presort={06},
+  rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
 @inproceedings{han2020adversarial,
@@ -1004,10 +1005,10 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   title={Function Interpolation for Learned Index Structures},
   year={2020},
   author={Setiawan, Naufal Fikri and Rubinstein, Benjamin I. P. and Borovica-Gajic, Renata},
-  booktitle={Proceedings of the Australasian Computer Science Week Multiconference},
-  series={ACSW},
-  publisher={ACM},
-  note={In the 31st Australasian Database Conference},
+  booktitle={Databases Theory and Applications},
+  series={ADC},
+  note={31st Australasian Database Conference},
   presort={05},
+  pages={68--80},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
