--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -968,6 +968,16 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pub=https://www.mja.com.au/journal/2020/tracking-tracing-trust-contemplating-mitigating-impact-covid-19-through-technological;pdf=https://www.mja.com.au/system/files/2020-05/Rubenstein%20mja20.00707%20-%207%20May%202020.pdf}
 }
 
+@misc{marchant2020a,
+  title={A general framework for label-efficient online evaluation with asymptotic guarantees},
+  author={Neil G. Marchant and Benjamin I. P. Rubinstein},
+  note = {arXiv:TBD [cs.LG]},
+  year={2020},
+  month={Jun},
+  presort={04},
+  rmdnote={pdf=https://arxiv.org/}
+}
+
 @inproceedings{liu2020legion,
   title={Legion: Best-First Concolic Testing},
   year={2020},
@@ -976,8 +986,21 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={04},
+  presort={05},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
+}
+
+
+@inproceedings{setiawan2020function,
+  title={Function Interpolation for Learned Index Structures},
+  year={2020},
+  author={Setiawan, Naufal Fikri and Rubinstein, Benjamin I. P. and Borovica-Gajic, Renata},
+  booktitle={Databases Theory and Applications},
+  series={ADC},
+  note={31st Australasian Database Conference},
+  presort={06},
+  pages={68--80},
+  rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
 
 @inproceedings{roohi2020assessing,
@@ -987,7 +1010,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={06},
+  presort={07},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -998,17 +1021,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
   note={To appear},
-  presort={07}
+  presort={08}
 }
 
-@inproceedings{setiawan2020function,
-  title={Function Interpolation for Learned Index Structures},
-  year={2020},
-  author={Setiawan, Naufal Fikri and Rubinstein, Benjamin I. P. and Borovica-Gajic, Renata},
-  booktitle={Databases Theory and Applications},
-  series={ADC},
-  note={31st Australasian Database Conference},
-  presort={05},
-  pages={68--80},
-  rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
-}
+
+
+
