--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -971,11 +971,11 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
 @misc{marchant2020a,
   title={A general framework for label-efficient online evaluation with asymptotic guarantees},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein},
-  note = {arXiv:TBD [cs.LG]},
+  note = {arXiv:2006.06963 [cs.LG]},
   year={2020},
   month={Jun},
   presort={04},
-  rmdnote={pdf=https://arxiv.org/}
+  rmdnote={pdf=https://arxiv.org/abs/2006.06963}
 }
 
 @inproceedings{liu2020legion,
