--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -963,9 +963,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2020},
   author={Leins, Kobi and Culnane, Chris and Rubinstein, Benjamin I. P.},
   journal={Medical Journal of Australia},
-  note={Preprint},
+  month={June},
   presort={03},
-  rmdnote={pub=https://www.mja.com.au/journal/2020/tracking-tracing-trust-contemplating-mitigating-impact-covid-19-through-technological;pdf=https://www.mja.com.au/system/files/2020-05/Rubenstein%20mja20.00707%20-%207%20May%202020.pdf}
+  rmdnote={pub=https://doi.org/10.5694/mja2.50669}
 }
 
 @misc{marchant2020a,
