--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -953,9 +953,11 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2020},
   author={Zhou, Shuo and Bondell, Howard and Tordesillas, Antoinette and Rubinstein, Benjamin I. P. and Bailey, James},
   journal={Annals of Applied Statistics},
-  note={To appear},
+  volume={14},
+  number={2},
+  pages={977-992},
   presort={02},
-  rmdnote={pdf=https://www.e-publications.org/ims/submission/AOAS/user/submissionFile/42032?confirm=68ff65ed}
+  rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
 }
 
 @article{leins2020tracking,
