--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -956,7 +956,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   volume={14},
   number={2},
   pages={977-992},
-  presort={02},
+  presort={04},
   rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
 }
 
@@ -966,7 +966,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Leins, Kobi and Culnane, Chris and Rubinstein, Benjamin I. P.},
   journal={Medical Journal of Australia},
   month={June},
-  presort={03},
+  presort={02},
   rmdnote={pub=https://doi.org/10.5694/mja2.50669}
 }
 
@@ -976,7 +976,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.06963 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={04},
+  presort={03},
   rmdnote={pdf=https://arxiv.org/abs/2006.06963}
 }
 
@@ -1026,6 +1026,22 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   presort={08}
 }
 
+@misc{zhang2020improving,
+  title={Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
+  author={Zhang, Ruihan and Madumal, Prashan and Miller, Tim and Ehinger, Kris and Rubinstein, Benjamin},
+  note = {arXiv:2006.15417 [cs.CV]},
+  year={2020},
+  month={Jun},
+  presort={09},
+  rmdnote={pdf=https://arxiv.org/abs/2006.15417}
+}
 
-
-
+@misc{gelbhart2020discrete,
+  title={Discrete Few-Shot Learning for Pan Privacy},
+  author={Roei Gelbhart and Benjamin I. P. Rubinstein},
+  note = {arXiv:2006.13120 [cs.LG]},
+  year={2020},
+  month={Jun},
+  presort={10},
+  rmdnote={pdf=https://arxiv.org/abs/2006.13120}
+}
