--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -956,7 +956,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   volume={14},
   number={2},
   pages={977-992},
-  presort={04},
+  presort={05},
   rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
 }
 
@@ -988,7 +988,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={05},
+  presort={06},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
@@ -1000,7 +1000,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Databases Theory and Applications},
   series={ADC},
   note={31st Australasian Database Conference},
-  presort={06},
+  presort={07},
   pages={68--80},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
@@ -1012,7 +1012,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={07},
+  presort={08},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -1023,7 +1023,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
   note={To appear},
-  presort={08}
+  presort={09}
 }
 
 @misc{zhang2020improving,
@@ -1032,7 +1032,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.15417 [cs.CV]},
   year={2020},
   month={Jun},
-  presort={09},
+  presort={10},
   rmdnote={pdf=https://arxiv.org/abs/2006.15417}
 }
 
@@ -1042,6 +1042,16 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={10},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
+}
+
+@misc{edwards2020a,
+  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  note = {arXiv:2007.05975 [cs.IT]},
+  year={2020},
+  month={Jul},
+  presort={04},
+  rmdnote={pdf=https://arxiv.org/abs/2007.05975}
 }
