--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -988,7 +988,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={06},
+  presort={07},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
@@ -1000,7 +1000,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Databases Theory and Applications},
   series={ADC},
   note={31st Australasian Database Conference},
-  presort={07},
+  presort={08},
   pages={68--80},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
@@ -1012,7 +1012,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={08},
+  presort={09},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -1023,7 +1023,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
   note={To appear},
-  presort={09}
+  presort={10}
 }
 
 @misc{zhang2020improving,
@@ -1032,7 +1032,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.15417 [cs.CV]},
   year={2020},
   month={Jun},
-  presort={10},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2006.15417}
 }
 
@@ -1042,7 +1042,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={11},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
 }
 
@@ -1054,4 +1054,15 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   month={Jul},
   presort={04},
   rmdnote={pdf=https://arxiv.org/abs/2007.05975}
+}
+
+@inproceedings{liu2020legionb,
+  title={Legion: Best-First Concolic Testing},
+  year={2020},
+  author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
+  booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
+  series={ASE},
+  note={Accepted},
+  presort={06},
+  rmdnote={code=https://github.com/Alan32Liu/Legion}
 }
