--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -240,16 +240,15 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   rmdnote={pdf=http://proceedings.mlr.press/v117/fish20a/fish20a.pdf;pub=http://proceedings.mlr.press/v117/fish20a.html;full=https://arxiv.org/abs/1709.09778}
 }
 
-@misc{marchant2019dblink,
+@article{marchant2020dblink,
   title={d-blink: Distributed End-to-End Bayesian Entity Resolution},
   author={Marchant, Neil G. and Steorts, Rebecca C. and Kaplan, Andee and Rubinstein, Benjamin I. P. and Elazar, Daniel N.},
-  eprinttype = {arXiv},
-  eprintclass = {stat.CO},
-  eprint = {1909.06039},
-  year={2019},
+  journal={Journal of Computational and Graphical Statistics},
+  year={2020},
   month={Sep},
-  presort={07},
-  rmdnote={pdf=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink}
+  note={Accepted},
+  presort={00},
+  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink}
 }
 
 @misc{culnane2019stop,
