--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -248,7 +248,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Sep},
   note={Accepted},
   presort={00},
-  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink}
+  rmdnote={full=https://arxiv.org/abs/1909.06039;code=https://github.com/ngmarchant/dblink;pub=https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451}
 }
 
 @misc{culnane2019stop,
